function-like/tests/{{macro_name}}/fail/invalid_syntax.rs
use proc_macro_template::layer;

fn main() {
    {{macro_name}}!(meow);
}
