function-like/tests/{{macro_name}}/fail/invalid_syntax.stderr
error: unexpected token
 --> tests/fail/invalid_syntax.rs:4:12
  |
4 |     {{macro_name}}!(meow);
  |                     ^^^^
